deployment.yaml
#Creates a deployment with name cache, it usesan image
#from docker hub. Also a service account 'ro-pod-access'
#is attached and hence the pod will only have required access
# for pods and services with Istio's rbac 
#The container listens on port 6379
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cache
  name: cache
  namespace: palo-alto-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      serviceAccount: ro-pod-access
      containers:
      - image: redis:latest
        name: cache
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
---
#Creates a deployment with name graphql, it uses the 
#image pushed in GCR. Also a service account 'get-express-svc'
#is attached and hence the pod will only have required access
# for pods and services with Istio's rbac 
#The container listens on port 4000
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: graphql
  name: graphql
  namespace: palo-alto-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      serviceAccount: get-express-svc
      containers:
      - image: gcr.io/palo-alto-networks-234507/cicd/graphql:v1
        name: graphql
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
---
#Creates a deployment with name graphql, it uses the 
#image pushed in GCR. Also a service account 'post-redis-svc'
#is attached and hence the pod will only have required access
# for pods and services with Istio's rbac 
#The container listens on port 3000
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: express
  name: express
  namespace: palo-alto-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      serviceAccount: post-redis-svc
      containers:
      - image: gcr.io/palo-alto-networks-234507/cicd/express:v1
        name: express
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
#Creates a deployment with name sfdc, it uses the 
#image pushed in GCR.The container listens on port 5000
#It uses the sfdc credentials from secrets
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sfdc
  name: sfdc
  namespace: palo-alto-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sfdc
  template:
    metadata:
      labels:
        app: sfdc
    spec:
      serviceAccount: secrets-access
      containers:
      - image: gcr.io/palo-alto-networks-234507/cicd/sfdc:v1
        name: sfdc
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
#Create a service to redirects the traffic from port 4000
#to graphql's port 4000. It uses the naming convention of Istio
kind: Service
apiVersion: v1
metadata:
  name: graphql
  namespace: palo-alto-demo
  labels:
    app: graphql
spec:
  selector:
    app: graphql
  ports:
  - port: 4000
    name: http-graphql
    targetPort: 4000
  type: ClusterIP
---
#Create a service to redirect the traffic from port 3000
#to express port 3000. It uses the naming convention of Istio
kind: Service
apiVersion: v1
metadata:
  name: express
  namespace: palo-alto-demo
  labels:
    app: express
spec:
  selector:
    app: express
  ports:
  - port: 3000
    name: http-express-svc
    targetPort: 3000
  type: ClusterIP
---
#Create a service to redirect the traffic from port 5000
#to express port 5000. It uses the naming convention of Istio
kind: Service
apiVersion: v1
metadata:
  name: sfdc
  namespace: palo-alto-demo
  labels:
    app: sfdc
spec:
  selector:
    app: sfdc
  ports:
  - port: 5000
    name: http-sfdc-service
    targetPort: 5000
  type: ClusterIP
---
#Create a service to redirect the traffic from port 6379
#to express port 6379. It uses the naming convention of Istio
kind: Service
apiVersion: v1
metadata:
  name: cache
  namespace: palo-alto-demo
  labels:
    app: cache
spec:
  selector:
    app: cache
  ports:
  - port: 6379
    name: redis-port
    targetPort: 6379
  type: ClusterIP
---
#Create a gateway listening on port 443
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-ilb
  namespace: palo-alto-demo
spec:
  selector:
    istio: ilbgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: https
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ilbgateway-certs/tls.crt
      privateKey: /etc/istio/ilbgateway-certs/tls.key
---
#Redirect '/graphql' endpoint from the
#gateway to graphql service on port 4000
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: graphql-vs
  namespace: palo-alto-demo
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway-ilb
  http:
  - match:
    - uri:
        exact: /graphql
    route:
    - destination:
        host: graphql
        port:
          number: 4000
---
#Redirect '/api/v1/sfdc' endpoint from the
#gateway to sfdc service on port 5000
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sfdc-vs
  namespace: palo-alto-demo
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway-ilb
  http:
  - match:
    - uri:
        exact: /api/v1/sfdc
    route:
    - destination:
        host: sfdc
        port:
          number: 5000
---
#Route every request for host graphql to 
#follow ISTIO_MUTUAL tls mode
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: graphql-destination
  namespace: palo-alto-demo
spec:
  host: graphql
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sfdc-destination
  namespace: palo-alto-demo
spec:
  host: sfdc
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: express-destination
  namespace: palo-alto-demo
spec:
  host: express
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cache-destination
  namespace: palo-alto-demo
spec:
  host: cache
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
#open port https 443 in istio ingress internal loadbalancer
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ilbgateway
  name: istio-ilbgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
